fix overflow

--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -256,6 +256,7 @@ a{
 .article-overflow{
     height: 55px;
     overflow: hidden;
+    width: 100%;
 }
 
 .article1{
